--- a/Micturition Code/output/simulation_config.json
+++ b/Micturition Code/output/simulation_config.json
@@ -52,6 +52,12 @@
   "node_sets": {
     "inp_nodes": {
       "model_type": "virtual"
+    },
+    "low_level_neurons": {
+      "level": "low"
+    },
+    "high_level_neurons": {
+      "level": "high"
     }
   },
   "network": "./circuit_config.json",
