--- a/Micturition Code/simulation_config.json
+++ b/Micturition Code/simulation_config.json
@@ -6,7 +6,7 @@
   }, 
   "target_simulator": "NEURON", 
   "run": {
-    "nsteps_block": 5000, 
+    "nsteps_block": 1000, 
     "tstop": 10000.0, 
     "dt": 0.1, 
     "dL": 9999, 
@@ -17,7 +17,7 @@
     "v_init": -80.0
   }, 
   "inputs": {
-	"blad_spikes_low":{
+	"Blad_spikes":{
 		"input_type":"spikes",
 		"module":"csv",
 		"input_file":"Blad_spikes.csv",
