updated code--working on guarding reflex

--- a/Micturition Code/output/simulation_config.json
+++ b/Micturition Code/output/simulation_config.json
@@ -58,6 +58,9 @@
     },
     "high_level_neurons": {
       "level": "high"
+    },
+    "eus_neurons": {
+      "pop_name": "EUSmn"
     }
   },
   "network": "./circuit_config.json",
