--- a/Micturition Code/simulation_config.json
+++ b/Micturition Code/simulation_config.json
@@ -55,7 +55,8 @@
  "node_sets":{
 	"inp_nodes": {"model_type": "virtual"},
 	"low_level_neurons": {"level": "low"},
-    	"high_level_neurons": {"level": "high"}
+    	"high_level_neurons": {"level": "high"},
+	"eus_neurons": {"pop_name": "EUSmn"}
  },	
   "network": "./circuit_config.json"
 }
