--- a/Micturition Code/simulation_config.json
+++ b/Micturition Code/simulation_config.json
@@ -56,7 +56,7 @@
 	"inp_nodes": {"model_type": "virtual"},
 	"low_level_neurons": {"level": "low"},
     	"high_level_neurons": {"level": "high"},
-	"eus_neurons": {"pop_name": "EUSmn"}
+	"eus_neurons": {"pop_name": "EUSaff"}
  },	
   "network": "./circuit_config.json"
 }
