--- a/Micturition Code/simulation_config.json
+++ b/Micturition Code/simulation_config.json
@@ -54,9 +54,9 @@
   },
  "node_sets":{
 	"inp_nodes": {"model_type": "virtual"},
-	"low_level_neurons": {"level": "low"},
-    	"high_level_neurons": {"level": "high"},
-	"eus_neurons": {"pop_name": "EUSaff"}
+	"low_level_neurons": {"level": "low", "pop_name": "PGN"},
+    	"high_level_neurons": {"level": "high","pop_name": "Bladaff"},
+	"eus_neurons": {"level": "high","pop_name": "EUSaff"}
  },	
   "network": "./circuit_config.json"
 }
